dep-loy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: purva-deployment
  namespace: ingress-nginx
  labels:
    app: django-portfolio
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django-portfolio
  template:
    metadata:
      labels:
        app: django-portfolio
        editor: vscode
    spec:
      containers:
        - name: django-portfolio
          image: purvakoushik/django-portfolio:1.0
          ports:
            - containerPort: 8000
