service.yml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: ingress-nginx
spec:
  type: NodePort
  selector:
    app: django-portfolio
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      nodePort: 31000
